@@ -2,7 +2,7 @@
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
  *
- *   Created: Sat Feb 24 11:41:13 2001
+ *   Created: Fri Mar 16 20:56:19 2001
  */
 #ifndef __CEXTRACT__
 #ifdef __STDC__
@@ -298,6 +298,7 @@ extern void info_keys ( object *op );
 extern void start_info ( object *op );
 extern char *crypt_string ( char *str, char *salt );
 extern int check_password ( char *typed, char *crypted );
+extern void enter_player_savebed ( object *op );
 extern void leave_map ( object *op );
 extern void set_map_timeout ( mapstruct *oldmap );
 extern char *clean_path ( char *file );
