@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 CVS changes since last release:
 
+MSW 2001/03/16:
+Change code so that if player dies and loading the players savebed map does
+not work, return player to EMERGENCY_MAPPATH instead.  New function added
+to server/main.c called enter_player_savebed which does the work,
+Files changed: include/sproto.h server/main.c server/player.c
+    server/spell_effect.c (comment added)
+Unrelated change: Remove messages about multiple resist types set.
+Files changed: common/loader.l common/loader.c
+
 MSW 2001/03/15:
 server/spell_effect.c: Add physical attacktype when casting holy possession.
     Otherwise, characters who use karate end up not being able to damaage
